--- a/index.html
+++ b/index.html
@@ -441,15 +441,15 @@
                 <div class="columndci">
                     <img class="demodci cursordci" src="./img/bootstrap.jpeg" style="width:100%" onclick="currentSlide(14)" alt="Bootstrap - eBay Store">
                 </div>
-
-                <!-- mongo -->
-                <div class="columndci">
-                    <img class="demodci cursordci" src="./img/mongo.png" style="width:100%" onclick="currentSlide(15)" alt="MongoDB - Email Contact List">
-                </div>
                 <!-- node -->
                 <div class="columndci">
-                    <img class="demodci cursordci" src="./img/node.png" style="width:100%" onclick="currentSlide(16)" alt="NodeJS - Chat Group App">
+                    <img class="demodci cursordci" src="./img/node.png" style="width:100%" onclick="currentSlide(15)" alt="NodeJS - Chat Group App">
                 </div>
+                <!-- mongo -->
+                <div class="columndci">
+                    <img class="demodci cursordci" src="./img/mongo.png" style="width:100%" onclick="currentSlide(16)" alt="MongoDB - Projects List">
+                </div>
+
 
             </div>
             <div class="caption-containerdci">
@@ -557,11 +557,17 @@
                 </div>
                 <div class="mySlidesdci">
                     <div class="numbertextdci"></div>
-                    <img class="projectShortcut" src="./img/socket.png" style="width:100%; height: auto;">
+                    <a href="https://github.com/beatrixyu/Socket-Nodejs-Chat-App" target="_blank">
+                    <img class="projectShortcut" src="./img/socket.png" style="width:100%; height: auto;"></a>
                 </div>
                 <div class="mySlidesdci">
                     <div class="numbertextdci"></div>
-                    <img class="projectShortcut" src="./img/nodejs.png" style="width:100%; height: auto;">
+                    <a href="https://story-share-react.herokuapp.com/auth" target="_blank">
+                        <img class="projectShortcut" src="./img/story3.png" style="width:100%; height: auto;">
+                        </a>
+    
+                    <!-- <a href="https://github.com/beatrixyu/Socket-Nodejs-Chat-App" target="_blank">
+                    <img class="projectShortcut" src="./img/nodejs.png" style="width:100%; height: auto;"></a> -->
                 </div>
 
                 <a class="prevdci" onclick="plusSlides(-1)">❮</a>
